--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                         <img src="assets/img/shibani1-removebg-preview.png" alt="" class="home__img">
                     </div> -->
                     <div class="home__social">
-                        <a href="https://www.linkedin.com/in/shibani-shibani-84a251233/" class="home__social-link" target="_blank">
+                        <a href="https://www.linkedin.com/in/shibani-shibani-84a251233/" class="home__social-link" target="_parent">
                             <i class='bx bxl-linkedin' ></i>
                         </a>
-                        <a href="https://github.com/Shibanimca23" class="home__social-link" target="_blank">
+                        <a href="https://github.com/Shibanimca23" class="home__social-link" target="_parent">
                             <i class='bx bxl-github' ></i>
                         </a>
                         <!-- <a href="https://dribbble.com/" class="home__social-link" target="_blank">
@@ -397,7 +397,7 @@
                     <div class="contact__content">
                     <div class="container-form">
                       <h3 class="contact__title">Write your message</h3>
-                      <form target="_blank" action="https://formsubmit.co/sahayashibani2002@gmail.com" method="POST" id="form" class="contact__form">
+                      <form target="_blank" action="https://formsubmit.co/sahayashibani2002@gmail.com" method="POST" id="form" class="contact__form" target="_parent>
                             <div class="form-row">
                               <div class="contact__form-div col">
                                 <label for="" class="contact__form-tag">Name</label>
