--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     <div class="contact__content">
                     <div class="container-form">
                       <h3 class="contact__title">Write your message</h3>
-                      <form target="_blank" action="https://formsubmit.co/sahayashibani2002@gmail.com" method="POST" id="form" class="contact__form" target="_parent>
+                      <form target="_parent" action="https://formsubmit.co/sahayashibani2002@gmail.com" method="POST" id="form" class="contact__form">
                             <div class="form-row">
                               <div class="contact__form-div col">
                                 <label for="" class="contact__form-tag">Name</label>
