--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <link rel="stylesheet" href="./assets/css/styles.css">
 
-        <title> Responsive portfolio website Ansel </title>
+        <title> Shibani Portfolio Project </title>
     </head>
     <body>
         <!--=============== HEADER ===============-->
