--- a/index.html
+++ b/index.html
@@ -324,14 +324,14 @@
                             <a href=" https://shibanimca23.github.io/Map-Moving/"><i class='bx bx-link-external' ></i></a></div>
                             <!-- <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat veritatis cupiditate dolores sunt quisquam magnam, voluptas quibusdam facere quis doloremque?</p> -->
                         </div>
-                        <div class="project__card swiper-slide">
+                      <!--<div class="project__card swiper-slide">
                             <a href=" https://shibanimca23.github.io/tower-game/"><img src="./assets/img/tower.jpg" alt="" class="project__img"></a>
                             <h3 class="project__name"> Tower Game</h3>
                             <div>
                                 <a href="https://github.com/Shibanimca23/tower-game"><i class='bx bx-link-alt'></i></a>
                             <a href="  https://shibanimca23.github.io/tower-game/"><i class='bx bx-link-external' ></i></a></div>
                             <!-- <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat veritatis cupiditate dolores sunt quisquam magnam, voluptas quibusdam facere quis doloremque?</p> -->
-                        </div>
+                        </div> -->
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
