--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                 <input type="email" class="contact__form-input form-control" placeholder="Insert your email">
                             </div>
                             <div class="contact__form-div contact__form-area">
-                                <label for="" class="contact__form-tag">Meassage</label>
+                                <label for="" class="contact__form-tag">Message</label>
                                 <textarea name="" id="" cols="30" rows="10" class="contact__form-input form-control" placeholder="Write your message"></textarea>
                             </div>   
 
