--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                             </div>
                           </div>
                           <div class="form-group contact__form-div contact__form-area">
-                            <label for="" class="contact__form-tag">Meassage</label>
+                            <label for="" class="contact__form-tag">Message</label>
                             <textarea placeholder="Write your message" class="form-control contact__form-input" name="message" rows="10" required></textarea>
                           </div>
                           <button type="Write your message" class=" button">Send Message</button>
