--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                         <div class="home__buttons">
                             <a href="assets/pdf/myResume.pdf" class="button button--ghost">
-                                Download CV
+                                View CV
                             </a>
                             <a href="#about" class="button">About me</a>
                         </div>
