--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                 <i class="bx bx-mail-send contact__card-icon"></i>
                                 <h3 class="contact__card-title">Email</h3>
                                 <span class="contact__card-data">sahayashibani2002@gmail.com</span>
-                                <a href="mailto:examplemail@correo.com" target="_blank" class="contact__button">
+                                <a href="mailto:examplemail@correo.com" target="_parent" class="contact__button">
                                     Write me <i class="'bx bx-right-arrow-alt contact__button-icon*"></i>
                                 </a>
                             </div>
@@ -360,7 +360,7 @@
                                 <i class='bx bxl-whatsapp contact__card-icon'></i>
                                 <h3 class="contact__card-title">Whatsapp</h3>
                                 <span class="contact__card-data">8825533038</span>
-                                <a href="https://api.whatsapp.com/send?phone=918825533038&text=Hello, more information!" target="_blank" class="contact__button">
+                                <a href="https://api.whatsapp.com/send?phone=918825533038&text=Hello, more information!" target="_parent" class="contact__button">
                                     Write me <i class="'bx bx-right-arrow-alt contact__button-icon*"></i>
                                 </a>
                             </div>
