--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                 <div class="skills__container container grid">
                     <div class="skills__content">
-                        <h3 class="skills_title">Frontend developer</h3>
+                        <h3 class="skills_title">Frontend</h3>
                         <div class="skills_box">
                             <div class="skills_group">
                                 <div class="skills__data">
@@ -208,7 +208,7 @@
                         </div>
                 </div>
                 <div class="skills__content">
-                    <h3 class="skills_title">Backend developer</h3>
+                    <h3 class="skills_title">Backend </h3>
                     <div class="skills_box">
                         <div class="skills_group">
                             <div class="skills__data">
