--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="home__data">
                         <span class="home__greeting">Hello, I'm</span>
                         <h1 class="home__name">Sahaya Shibani</h1>
-                        <h3 class="home__education">Software Developer</h3>
+                        <h3 class="home__education">Front End Developer</h3>
 
                         <div class="home__buttons">
                             <a href="assets/pdf/myResume.pdf" class="button button--ghost">
@@ -131,7 +131,7 @@
                                    </div>
                         </div> -->
                         <p class="about__description">
-                           <b> I am Sahaya Shibani</b>, a enthusiastic student, I bring a passion for software development and a relentless commitment to learning. With a keen interest in software technology, I have actively sought opportunities to expand my knowledge and practical skills. My journey is marked by continuous growth, and I look forward to the exciting challenges ahead.</p>
+                           <b> I am Sahaya Shibani</b>, a enthusiastic student, I bring a passion for front end development and a relentless commitment to learning. With a keen interest in front end technology, I have actively sought opportunities to expand my knowledge and practical skills. My journey is marked by continuous growth, and I look forward to the exciting challenges ahead.</p>
 
                         <!-- <a href="https://youtu.be/OWDadpjkTUM?si=n3sTYTM3ayZUFZK-" class="button">My Intro Video</a> -->
                         <div class="embed-responsive embed-responsive-16by9 ">
