--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <img src="assets/img/shibani1-removebg-preview.png" alt="" class="home__img">
                     </div> -->
                     <div class="home__social">
-                        <a href="https://www.linkedin.com/in/shibani-shibani-84a251233/" class="home__social-link" target="_parent">
+                        <a href="https://www.linkedin.com/in/sahayashibani/" class="home__social-link" target="_parent">
                             <i class='bx bxl-linkedin' ></i>
                         </a>
                         <a href="https://github.com/Shibanimca23" class="home__social-link" target="_parent">
@@ -134,10 +134,10 @@
                            <b> I am Sahaya Shibani</b>, a enthusiastic student, I bring a passion for front end development and a relentless commitment to learning. With a keen interest in front end technology, I have actively sought opportunities to expand my knowledge and practical skills. My journey is marked by continuous growth, and I look forward to the exciting challenges ahead.</p>
 
                         <!-- <a href="https://youtu.be/OWDadpjkTUM?si=n3sTYTM3ayZUFZK-" class="button">My Intro Video</a> -->
-                        <div class="embed-responsive embed-responsive-16by9 ">
+<!--                         <div class="embed-responsive embed-responsive-16by9 ">
                             <iframe width="200" height="100" src="https://www.youtube.com/embed/OWDadpjkTUM?si=n3sTYTM3ayZUFZK-" allowfullscreen>
                             </iframe>
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
